--- a/ch08-03-hash-maps.html
+++ b/ch08-03-hash-maps.html
@@ -188,7 +188,7 @@
 </span></code></pre></pre>
 <p><span class="caption">範例 8-20：建立新的雜湊映射並插入一些鍵值</span></p>
 <p>注意到我們需要先使用 <code>use</code> 將標準函式庫的 <code>HashMap</code> 集合引入。在我們介紹的三個常見集合中，此集合是最少被用到的，所以它並沒有包含在 prelude 內讓我們能自動引用。雜湊映射也沒有像前者那麼多標準函式庫提供的支援，像是內建建構它們的巨集。</p>
-<p>和向量一樣，雜湊映射會將它們的資料儲存在堆積上。此 <code>HashMap</code> 得鍵是 <code>String</code> 型別而值是 <code>i32</code> 型別。和向量一樣，雜湊函式宣告後就都得是同類的，所有的鍵都必須是同型別，且所有的值也都必須是同型別。</p>
+<p>和向量一樣，雜湊映射會將它們的資料儲存在堆積上。此 <code>HashMap</code> 的鍵是 <code>String</code> 型別而值是 <code>i32</code> 型別。和向量一樣，雜湊函式宣告後就都得是同類的，所有的鍵都必須是同型別，且所有的值也都必須是同型別。</p>
 <p>另一種建構雜湊映射的方式為使用疊代器並在一個元組組成的向量中使用 <code>collect</code> 方法，其中每個元組都包含一個鍵與值的配對。我們會在第十三章的<a href="ch13-02-iterators.html">「使用疊代器來處理一系列的項目」</a><!-- ignore -->段落中深入探討疊代器與它們相關的方法。<code>collect</code> 方法會將收集的資料轉換成其他集合型別，包含 <code>HashMap</code>。舉例來說，如果我們有兩個向量分別是隊伍名稱與隊伍分數的話，我們可以使用 <code>zip</code> 方法來產生由元組組成的向量，其中「藍隊」會與 10 配對，以此類推。然後我們就能用 <code>collect</code> 方法將元組向量轉換成雜湊映射，如範例 8-21 所示。</p>
 <pre><pre class="playground"><code class="language-rust"><span class="boring">fn main() {
 </span>    use std::collections::HashMap;
@@ -218,7 +218,7 @@
 </span></code></pre></pre>
 <p><span class="caption">範例 8-22：展示當鍵值插入雜湊映射後就會擁有它們</span></p>
 <p>我們之後就無法使用變數 <code>field_name</code> 和 <code>field_value</code>，因為它們的值已經透過呼叫 <code>insert</code> 被移入雜湊映射之中。</p>
-<p>如果我們插入雜湊映射的數值是引用的話，該值就不會被移動到雜湊映射之中。不過該值的引用就必須一直有效，至少直到該雜湊映射離開作用域為止。我們會在第十章的<a href="ch10-03-lifetime-syntax.html#validating-references-with-lifetimes">“透過生命週期驗證引用”</a><!-- ignore --> 段落討落更多細節。</p>
+<p>如果我們插入雜湊映射的數值是引用的話，該值就不會被移動到雜湊映射之中。不過該值的引用就必須一直有效，至少直到該雜湊映射離開作用域為止。我們會在第十章的<a href="ch10-03-lifetime-syntax.html#validating-references-with-lifetimes">“透過生命週期驗證引用”</a><!-- ignore -->段落討落更多細節。</p>
 <h3 id="取得雜湊映射的數值"><a class="header" href="#取得雜湊映射的數值">取得雜湊映射的數值</a></h3>
 <p>我們可以透過 <code>get</code> 方法並提供鍵來取得其在雜湊映射對應的值，如範例 8-23 所示。</p>
 <pre><pre class="playground"><code class="language-rust"><span class="boring">fn main() {
