--- a/ch19-03-advanced-traits.html
+++ b/ch19-03-advanced-traits.html
@@ -353,19 +353,19 @@ impl Human {
 </span><span class="boring">
 </span><span class="boring">impl Pilot for Human {
 </span><span class="boring">    fn fly(&amp;self) {
-</span><span class="boring">        println!(&quot;This is your captain speaking.&quot;);
+</span><span class="boring">        println!(&quot;這裡是艦長發言。&quot;);
 </span><span class="boring">    }
 </span><span class="boring">}
 </span><span class="boring">
 </span><span class="boring">impl Wizard for Human {
 </span><span class="boring">    fn fly(&amp;self) {
-</span><span class="boring">        println!(&quot;Up!&quot;);
+</span><span class="boring">        println!(&quot;起！&quot;);
 </span><span class="boring">    }
 </span><span class="boring">}
 </span><span class="boring">
 </span><span class="boring">impl Human {
 </span><span class="boring">    fn fly(&amp;self) {
-</span><span class="boring">        println!(&quot;*waving arms furiously*&quot;);
+</span><span class="boring">        println!(&quot;*狂揮雙臂*&quot;);
 </span><span class="boring">    }
 </span><span class="boring">}
 </span><span class="boring">
