deploy: 9731174efd503e903bbeca0395596e826841a61c

--- a/appendix-07-nightly-rust.html
+++ b/appendix-07-nightly-rust.html
@@ -184,7 +184,7 @@
 <li>穩定版（Stable）</li>
 </ul>
 <p>大多數的 Rust 開發者主要都使用穩定版的通道，但是想要實驗新功能的人可以嘗試使用夜版或測試版。</p>
-<p>以下是開發與發佈過程是如何進行的範例：讓我們假設 Rust 團隊正在準備發佈 Rust 1.5。這在 2015 年十二月就發佈了，並不過這能為我們提供較真實的版本數字。其中有一個新功能會加入 Rust 並在 <code>master</code> 分支新增一個 commit。每個晚上 Rust 都會產生新的夜版版本，然後每到天亮就會發佈，而這些發佈均由發佈基礎設施自動產生。所以隨著時間過去，我們每晚都會有一個發佈像這樣進行：</p>
+<p>以下是開發與發佈過程是如何進行的範例：讓我們假設 Rust 團隊正在準備發佈 Rust 1.5。這在 2015 年十二月就發佈了，這只是能為我們提供較真實的版本數字。其中有一個新功能會加入 Rust 並在 <code>master</code> 分支新增一個 commit。每個晚上 Rust 都會產生新的夜版版本，然後每到天亮就會發佈，而這些發佈均由發佈基礎設施自動產生。所以隨著時間過去，我們每晚都會有一個發佈像這樣進行：</p>
 <pre><code class="language-text">nightly: * - - * - - *
 </code></pre>
 <p>接著每隔六週就是時候發佈新的發佈版本了！Rust repository 的 <code>beta</code> 分支會從夜版使用的 <code>master</code> 分支產生。現在我們就有了兩種發佈：</p>
@@ -216,8 +216,8 @@ beta:                * - - - - - - - - *       *
                                        |
 stable:                                *
 </code></pre>
-<p>這就叫「火車模型（train model）」，因為每個六週就會有個發佈「駛離車站」，但其仍需要穿梭過測試版通道，才能抵達穩定版發佈。</p>
-<p>Rust 會像發條裝置一樣每個六週定時發佈。如果你已經知道一個 Rust 發佈的日期，你就能知道下一個的發佈日期，也就是六週之後。這樣每隔六週發佈的時程表有個好處是下一輛火車很快也會接著抵達。如果某個特定版本遺漏某項功能的話，不用擔心，因為下一版很快就會來臨了！這能降低發佈截止日期前，不得不偷偷釋出尚未完善的功能的壓力。</p>
+<p>這就叫「火車模型（train model）」，因為每隔六週就會有個發佈「駛離車站」，但其仍需要穿梭過測試版通道，才能抵達穩定版發佈。</p>
+<p>Rust 會像發條裝置一樣每隔六週定時發佈。如果你已經知道一個 Rust 發佈的日期，你就能知道下一個的發佈日期，也就是六週之後。這樣每隔六週發佈的時程表有個好處是下一輛火車很快也會接著抵達。如果某個特定版本遺漏某項功能的話，不用擔心，因為下一版很快就會來臨了！這能降低發佈截止日期前，不得不偷偷釋出尚未完善的功能的壓力。</p>
 <p>幸虧有此流程，你永遠都可以看到 Rust 的下一個版本並驗證你是否能輕鬆升級。如果測試版不如你所預期，你可以回報給團隊並在穩定版發佈前修正完成！在測試版出現重大缺陷是很少見的，但 <code>rustc</code> 本身仍是個軟體，總避免不了些錯誤發生。</p>
 <h3 id="不穩定功能"><a class="header" href="#不穩定功能">不穩定功能</a></h3>
 <p>此發佈模型還有一項重點，那就是不穩定（unstable）功能。Rust 使用一個叫做「功能標記（feature flags）」的技術來決定一個發佈能啟用哪些功能。如果有個新功能正在積極開發中，它可以加進 <code>master</code> 因而出現在夜版中，但是會有個<strong>功能標記</strong>。如果身為使用者的你想要嘗試看看仍在開發中的功能的話，你是可以使用的。但是你必須透過 Rust 夜版並在你的程式碼指明對應的功能標記才行。</p>
