--- a/ch20-02-multithreaded.html
+++ b/ch20-02-multithreaded.html
@@ -1061,7 +1061,7 @@ Worker 2 got a job; executing.
 </code></pre>
 <p>成功了！我們現在有個執行緒池能非同步地處理連線。我們產生的執行緒不超過四條，所以如果伺服器收到大量請求時，我們的系統就不會超載。如果我們下達 <code>/sleep</code> 的請求，伺服器會有其他執行緒來處理其他請求並執行它們。</p>
 <blockquote>
-<p>注意：如果你在數個瀏覽器視窗同時打開 <code>/sleep</code>，它們可能會彼此間格 5 秒鐘來讀取。這是因為有些網頁流來器會對多個相同請求的實例做快取。這項限制不是網頁伺服器造成的。</p>
+<p>注意：如果你在數個瀏覽器視窗同時打開 <code>/sleep</code>，它們可能會彼此間格 5 秒鐘來讀取。這是因為有些網頁瀏覽器會對多個相同請求的實例做快取。這項限制不是網頁伺服器造成的。</p>
 </blockquote>
 <p>在學習過第十八章的 <code>while let</code> 迴圈後，你可能會好奇為何我們不像範例 20-21 這樣來寫工作者執行緒的程式碼。</p>
 <p><span class="filename">檔案名稱：src/lib.rs</span></p>
