--- a/ch19-05-advanced-functions-and-closures.html
+++ b/ch19-05-advanced-functions-and-closures.html
@@ -222,7 +222,7 @@ fn main() {
 </span></code></pre></pre>
 <p>這裡，我們對一個範圍呼叫 <code>map</code>，並用每個 <code>u32</code> 值，透過 <code>Status::Value</code> 的初始化函式來建立 <code>Status::Value</code> 的實例。有些人更喜歡上述的作法，但有人偏好閉包。這兩者的編譯結果相同，所以選一個你覺得清晰的風格吧。</p>
 <h3 id="回傳閉包"><a class="header" href="#回傳閉包">回傳閉包</a></h3>
-<p>閉包是用特徵來表示，言下之意是你不能直接回傳一個閉包。大多數的情況，當你想回傳一個特徵時，可以改回傳有實作該特徵的具體型別。但你並無法對閉包這樣做，因為它們根本沒有可供回傳的具體型別，比方說不允許你使用 <code>fn</code> 函式指標作為回傳型別。</p>
+<p>閉包是用特徵來表示，言下之意是你不能直接回傳一個閉包。大多數的情況，當你想回傳一個特徵時，可以改回傳有實作該特徵的具體型別。但你並無法對閉包這樣做，因為它們根本沒有可供回傳的具體型別，比方說不允許你使用 <code>Fn</code> 特徵作為回傳型別。</p>
 <p>接下來的程式碼嘗試直接回傳一個閉包，但它無法編譯：</p>
 <pre><code class="language-rust ignore does_not_compile">fn returns_closure() -&gt; dyn Fn(i32) -&gt; i32 {
     |x| x + 1
