deploy: e876f9bb859035b7ce8aca5fbfafc09d3af21577

--- a/print.html
+++ b/print.html
@@ -20567,7 +20567,7 @@ fn main() {
 <li>穩定版（Stable）</li>
 </ul>
 <p>大多數的 Rust 開發者主要都使用穩定版的通道，但是想要實驗新功能的人可以嘗試使用夜版或測試版。</p>
-<p>以下是開發與發佈過程是如何進行的範例：讓我們假設 Rust 團隊正在準備發佈 Rust 1.5。這在 2015 年十二月就發佈了，這只是能為我們提供較真實的版本數字。其中有一個新功能會加入 Rust 並在 <code>master</code> 分支新增一個 commit。每個晚上 Rust 都會產生新的夜版版本，然後每到天亮就會發佈，而這些發佈均由發佈基礎設施自動產生。所以隨著時間過去，我們每晚都會有一個發佈像這樣進行：</p>
+<p>以下是開發與發佈過程是如何進行的範例：讓我們假設 Rust 團隊正在準備發佈 Rust 1.5。這版本在 2015 年十二月就發佈，做此假設只是為我們提供較真實的版本數字。其中有一個新功能會加入 Rust 並在 <code>master</code> 分支新增一個 commit。每個晚上 Rust 都會產生新的夜版版本，然後每到天亮就會發佈，而這些發佈均由發佈基礎設施自動產生。所以隨著時間過去，我們每晚都會有一個發佈像這樣進行：</p>
 <pre><code class="language-text">nightly: * - - * - - *
 </code></pre>
 <p>接著每隔六週就是時候發佈新的發佈版本了！Rust repository 的 <code>beta</code> 分支會從夜版使用的 <code>master</code> 分支產生。現在我們就有了兩種發佈：</p>
