deploy: ab37e4ec0e9cb58ef39b26255cdafb4ed2aa0f1a

--- a/ch05-02-example-structs.html
+++ b/ch05-02-example-structs.html
@@ -281,7 +281,7 @@ fn main() {
 }
 </code></pre></pre>
 <p><span class="caption">範例 5-12：加上推導（derive） <code>Debug</code> 特徵的標記並印出 <code>Rectangle</code> 實例的格式化資訊</span></p>
-<p>現在當我們執行程式，我們不會在得到錯誤了，而且我們可以看到格式化後的輸出結果：</p>
+<p>現在當我們執行程式，我們不會再得到錯誤了，而且我們可以看到格式化後的輸出結果：</p>
 <pre><code class="language-console">$ cargo run
    Compiling rectangles v0.1.0 (file:///projects/rectangles)
     Finished dev [unoptimized + debuginfo] target(s) in 0.48s
