--- a/ch10-01-syntax.html
+++ b/ch10-01-syntax.html
@@ -410,7 +410,7 @@ fn main() {
 <p>在 <code>main</code> 中，我們定義了一個 <code>Point</code>，其 <code>x</code> 型別為 <code>i32</code>（數值為 <code>5</code>），<code>y</code> 型別為 <code>f64</code>（數值為 <code>10.4</code>）。變數 <code>p2</code> 是個 <code>Point</code> 結構體，<code>x</code> 為字串切片（數值為 <code>&quot;Hello&quot;</code>），<code>y</code> 為 <code>char</code>（數值為 <code>c</code>）。在 <code>p1</code> 呼叫 <code>mixup</code> 並加上引數 <code>p2</code> 的話會給我們 <code>p3</code>，它的 <code>x</code> 會有型別 <code>i32</code>，因為 <code>x</code> 來自 <code>p1</code>。而且變數 <code>p3</code> 還會有型別為 <code>char</code> 的 <code>y</code>，因為 <code>y</code> 來自 <code>p2</code>。<code>println!</code> 巨集的呼叫就會顯示 <code>p3.x = 5, p3.y = c</code>。</p>
 <p>此例是是為了展示一些泛型參數是透過 <code>impl</code> 宣告而有些則是透過方法定義來得。在此，泛型參數 <code>T</code> 和 <code>U</code> 是宣告在 <code>impl</code> 之後，因為它們與結構體定義有關聯。而在 <code>fn mixup</code> 之後宣告的泛型參數只和該方法有關。</p>
 <h3 id="使用泛型的程式碼效能"><a class="header" href="#使用泛型的程式碼效能">使用泛型的程式碼效能</a></h3>
-<p>你可能會好奇當你使用泛型型別參數會不會有執行時的消耗。好消息是 Rust 實作泛型的方式讓你使用泛型的的程式碼跑得不會比使用實際型別還來的慢。</p>
+<p>你可能會好奇當你使用泛型型別參數會不會有執行時的消耗。好消息是 Rust 實作泛型的方式讓你使用泛型的程式碼跑得不會比使用實際型別還來的慢。</p>
 <p>Rust 在編譯時對使用泛型的程式碼進行單態化（monomorphization）。<strong>單態化</strong>是個讓泛型程式碼轉換成特定程式碼的過程，在編譯時填入實際的型別。</p>
 <p>在此過程中，編譯器會做與我們在範例 10-5 建立泛型函式相反的事：編譯器檢查所有泛型程式碼被呼叫的地方，並依據泛型程式碼被呼叫的情況產生實際型別的程式碼。</p>
 <p>讓我們看看這在標準函式庫的枚舉 <code>Option&lt;T&gt;</code> 中是怎麼做到的：</p>
